--- a/sections/PhysTheory/CalculatingOffset.tex
+++ b/sections/PhysTheory/CalculatingOffset.tex
@@ -1,4 +1,8 @@
 \section{Fireing Offset}
 As described in the requirements in \autoref{} the cannon needs to calculate an
-offset to be able to hit a target in motion. This is needed as the projectile's
-trajectory 
+offset to be able to hit a target in motion. In order to calculate this we will
+need \ldots \nl
+
+
+This can be calculated using \autoref{FinEq} which was derived in
+\autoref{ProjMotion}.
