--- a/sections/PhysTheory/ProjectilePhysics.tex
+++ b/sections/PhysTheory/ProjectilePhysics.tex
@@ -10,3 +10,5 @@ phenomena which are relevant to the motion of the cannons projectile.
 \input{sections/PhysTheory/ProjectileMotion.tex}
 \input{sections/PhysTheory/CalculatingOffset.tex}
 \input{sections/PhysTheory/AirResDiscussion.tex}
+\input{sections/PhysTheory/TargetPhys.tex}
+\input{sections/PhysTheory/CalculatingOffset.tex}
