--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -11,6 +11,7 @@ The testing will be divided into to two parts, one part is testing the two
 distance sensors and the second part is testing the camera. 
 
 \subsection{Ultrasonic Sensor}
+The test of the ultrasonic sensor was conduted using 
 
 \subsection{Infrared}
 
