--- a/sections/sensorTheory.tex
+++ b/sections/sensorTheory.tex
@@ -1,11 +1,21 @@
-\chapter{Sensor Teori}
-\section{Ultra Sonic Sensor}
-Virker ved at den sender lyd ud af en af de to huller, hvor det andet modtager
-lyd bølgerne som bliver kastet tilbage fra et object, på den måde kan den
-udregne afstanden mellem sensoren og objektet ved at halverer tiden det tager
-fra den udsender lyden til den modtager det tilbagekastet lyd \PS.
+\chapter{Sensor Theory}
+\section{Ultrasonic Sensor}
 
-(To be conntiued)
+The ultrasonic sensor works by producing sound waves from one of the two
+frontal holes. The sound wave is then bounced back by an object and received by
+the second hole. The delay between producing and receiving the sound wave
+determines how far away the object is.
+
+The ultrasonic sensor described in this section is an ultrasonic sensor from
+Lego NXT. The product description says that it has a maximum range of 2.5m with
+a precision of +/- 3cm. In actuality the product that was used begins loose
+precision after anything further away than 1.5m.
+
+There is a delay of 25ms at often it can be used to determine the distance to an
+object. Anything faster than that and the results become very imprecise.
+
+Use this as source:
+http://www.education.rec.ri.cmu.edu/previews/nxt_products/robotics_eng_vol_1/preview/content/reference/helpers/ultrasonic.htm
 
 \section{Infrarød Sensor}
 En infrarød sensor virker på samme princip som ultra sonic sensor, her er det så
