--- a/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
@@ -17,12 +17,13 @@ By examining some common types of embedded systems we can try to further underst
 
 So what are embedded systems. These can be found in a variety of different electronic devices such as
 \begin{itemize}
-\item Consumer electronics - calculators, cellphones(smartphones ofc), digital cameras, camcorders, handheld gaming devices
+\item Consumer electronics - One of the obvious categories in calculators, cellphones, digital cameras, camcorders, handheld gaming devices
 \item Home Appliances - Washing machine, tumbledryer, thermostats, home security systems, and lighting systems(device that controls lights in a home)
 \item Office automation equipment - Copymachine, printer, scanner, fax machine
-\item Business equipment -
+\item Business equipment - ATM's, cardreader systems, pagers,
 \item Automobiles - There is a lot of embedded systems in a typical car today - the ABS-brakes of a modern car is a very typical
-example of not only a embedded system, but also a Real-Time-System, which will be explained later
+example of not only a embedded system, but also a Real-Time-System, which will be explained later. Other examples include cruise-control
+active suspension, fuel injection, transmission control etc.
 \end{itemize}
 
 
