--- a/sections/sensorTheory.tex
+++ b/sections/sensorTheory.tex
@@ -1,6 +1,5 @@
 \chapter{Sensor Theory}
 \section{Ultrasonic Sensor}
-
 The ultrasonic sensor works by producing sound waves from one of the two
 frontal holes. The sound wave is then bounced back by an object and received by
 the second hole. The delay between producing and receiving the sound wave
@@ -11,8 +10,8 @@ Lego NXT. The product description says that it has a maximum range of 2.5m with
 a precision of +/- 3cm. In actuality the product that was used begins loose
 precision after anything further away than 1.5m.
 
-There is a delay of 25ms at often it can be used to determine the distance to an
-object. Anything faster than that and the results become very imprecise.
+There is a delay of 25ms at how often it can be used to determine the distance
+to an object. Anything faster than that and the results become very imprecise.
 
 Use this as source:
 http://www.education.rec.ri.cmu.edu/previews/nxt_products/robotics_eng_vol_1/preview/content/reference/helpers/ultrasonic.htm
