Nearly finished EmbeddedSystemschapter

--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -7,7 +7,7 @@
 %		DC v. Servo
 %	``Final'' choise of hardware
 \input{sections/Requirements/Scenario.tex}
-
+\input{sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex}
 
 \part{Testing}
 \input{sections/PhysTheory/ProjectilePhysics.tex}%Physics of shooting
