--- a/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
@@ -2,7 +2,7 @@
 introduction - As most people are probably aware of, computers have become an integral part of our modern society,
 and rapidly changing the way we do things. When most people say computers, they talk about the class of computers
 known as desktops, laptops, servers and tablets. But there is an entire class of computers surrounding us in much greater numbers,
-although their presence is a lot more incognito. The computers are built into larger electronic deviced.
+although their presence is a lot more incognito. The computers are built into larger electronic devices.
 This class of computer systems is also known as Embedded Systems.
 
 What is an embedded system?
@@ -25,9 +25,20 @@ So what are embedded systems. These can be found in a variety of different elect
 example of not only a embedded system, but also a Real-Time-System, which will be explained later. Other examples include cruise-control
 active suspension, fuel injection, transmission control etc.
 \end{itemize}
+\nl
 
+So, we are in fact surrounded by embedded systems of different types in our modern lives.
 
+Most embedded systems also share a couple of key characteristics:
 
+\begin{enumerate}
+  \item Single-functioned - Most embedded systems have a single function ie. the same program that executes again and again, for example a Washing machine(although the program can have several subprograms such as wool, ecofriendly, etc)
+  On the other side of the spectrum we have desktop computers which can run a variety of programs, and allows the user to install and delete them as well.
+  \item Tightly constrained - All electronic devices have some form of constrain imposed on them, but for embedded systems these constraints can
+  are much more noticeable. Using cost, size, power and performance as a design-metric, the system can be balanced since tradeoffs are usually necessary. For example a washing machine might limit the size and cost of the system whereas you can slack a bit on the power consumption and performance.
+  \item Reactive and realtime - A lot of embedded systems also has to react and respond to certain input. If this input has a deadline, it is in fact a real-time system. Consider a ABS-brake in a car, it receives an input when the driver presses the brake.
+  It then must apply the correct amount of pressure to the brakes according to the speed of the wheels, by calculating these factors. It then needs to apply this to the brakes. And it all has to be within the deadline.
+\end{enumerate}
 Intro - fluff
 What is a embedded system
 Types of ES - mission critical(Rts?)
