--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -4,7 +4,7 @@ the different sensors. The testing of the sensors will also be used to test how
 precise they are.\nl
 
 First the testing testing methodology will be explained, then this methodology
-will be used to devise tests for the different sensors. 
+will be used to devise tests for the different sensors. now we tet
 
 \subsection{Testing Methodology}
 The testing will be divided into to two parts, one part is testing the two
