--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -4,14 +4,17 @@ the different sensors. The testing of the sensors will also be used to test how
 precise they are.\nl
 
 First the testing testing methodology will be explained, then this methodology
-will be used to devise tests for the different sensors. now we tet
+will be used to devise tests for the different sensors. 
 
 \subsection{Testing Methodology}
 The testing will be divided into to two parts, one part is testing the two
 distance sensors and the second part is testing the camera. 
 
 \subsection{Ultrasonic Sensor}
-The test of the ultrasonic sensor was conduted using 
+The test of the ultrasonic sensor was conduted using a tape measure and a wall
+made in LEGO. The test then proceeded by taking measurements at specific
+lengths \fix{Table with results}
+{INPUT TABLE HERE}
 
 \subsection{Infrared}
 
