Included scenarios in the pdf, propably going to need another location

--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -1,4 +1,5 @@
 \inputS{Introduction}%Introduction
+\inputS{Requirements/Scenario}
 \part{Analysis}
 \input{sections/HWSelection/PlatformChoise/PlatformChoise.tex}%NXT v. Arduino
 
