--- a/sections/Requirements/Scenario.tex
+++ b/sections/Requirements/Scenario.tex
@@ -4,19 +4,29 @@
 An ideal scenario for the turret is presented:\nl
 
 The turret is able to turn 180 degrees.\nl
-The turret is able to adjust its firing angle 45 degrees.\nl 
+
+The turret is able to adjust its firing angle 45 degrees.\nl
+ 
 The turret has a max shooting range of 350 cm.\nl
+
 The turret is able to detect targets at a range of up to 500 cm.\nl
+
 The turret is able to track a target once detected, in order to collect data.\nl
+
 The turret is able to predict where a moving target will be in order to hit it,
 both when the target has constant speed and when the speed varies.\nl
+
 The turret is able to hit a moving a target traveling with a speed that
 requires it to adjust its cannon in order to hit the target.\nl
+
 The turret is able to prioritize and handle multiple targets.\nl
 
 The target has a size of 10cm x 10cm.\nl
+
 The target is able to move at a constant speed of up 2.5 m/s.\nl
+
 The target is able to accelerate and decelerate.\nl
+
 The target is traveling on an even plane.\nl
 
 \figx{BaseScenario.png}{How the different aspects are seen - not final
@@ -75,42 +85,42 @@ again.\nl
 
 % \subsection{Scenario1 - Tracking}
 % 
-% Den bliver sat på en plan overflade og derefter tændt ved at trykke på en knap.
+% Den bliver sat pï¿½ en plan overflade og derefter tï¿½ndt ved at trykke pï¿½ en knap.
 % 
 % Den begynder nu at langsomt at dreje 45 grader til hver side fra sit udgangs
 % punkt. 
 % 
-% Den ser bevægelse i baggrunden og begynder at følge målet som bevæger sig i en
-% bue 2 meter uden om turreten. Målet bliver ved med at holde en vis
+% Den ser bevï¿½gelse i baggrunden og begynder at fï¿½lge mï¿½let som bevï¿½ger sig i en
+% bue 2 meter uden om turreten. Mï¿½let bliver ved med at holde en vis
 % distance til turreten.
 % 
-% Turreten følger målet indtil det har bevæget sig mere end 60 grader væk fra
-% nulpunkts vinklen. Turreten går da tilbage til nulpunkts vinklen.
+% Turreten fï¿½lger mï¿½let indtil det har bevï¿½get sig mere end 60 grader vï¿½k fra
+% nulpunkts vinklen. Turreten gï¿½r da tilbage til nulpunkts vinklen.
 % 
 % \subsection{scenario2 - Idle}
 % 
-% Den bliver sat på en plan overflade og derefter tændt ved at trykke på en knap.
+% Den bliver sat pï¿½ en plan overflade og derefter tï¿½ndt ved at trykke pï¿½ en knap.
 % 
 % Den begynder nu at langsomt at dreje 45 grader til hver side fra sit udgangs
 % punkt.
 % 
-% Den ser ingen bevægelse og forsætter med at dreje 45 grader til hver side.
+% Den ser ingen bevï¿½gelse og forsï¿½tter med at dreje 45 grader til hver side.
 % 
 % \subsection{scenario3 - Shooting}
 % 
-% Den bliver sat på en plan overflade og derefter tændt ved at trykke på en knap.
+% Den bliver sat pï¿½ en plan overflade og derefter tï¿½ndt ved at trykke pï¿½ en knap.
 % 
 % Den begynder nu langsomt at dreje 45 grader til hver side fra sit udgangspunkt.
 % 
-% Der ser bevægelse i baggrunden og begynder at følge målet. Den finder frem til
-% at målet er kommet ind i dens killzone.
+% Der ser bevï¿½gelse i baggrunden og begynder at fï¿½lge mï¿½let. Den finder frem til
+% at mï¿½let er kommet ind i dens killzone.
 % 
-% Den begynder nu at observere og derefter forudsige hvor målet ved være om kort
+% Den begynder nu at observere og derefter forudsige hvor mï¿½let ved vï¿½re om kort
 % tid. 
 % 
-% Efter dette er beregnet stiller den sig op så den vil kunne ramme målet når den
+% Efter dette er beregnet stiller den sig op sï¿½ den vil kunne ramme mï¿½let nï¿½r den
 % skyder.
 % 
-% Den gentager nu dette indtil målet har bevæget sig uden for rækkevidde,
-% hvorefter den stopper med at skyde. Hvis målet ikke bevæger sig videre,
-% forsætter den med at følge målet. Ellers går den tilbage til at idle.
+% Den gentager nu dette indtil mï¿½let har bevï¿½get sig uden for rï¿½kkevidde,
+% hvorefter den stopper med at skyde. Hvis mï¿½let ikke bevï¿½ger sig videre,
+% forsï¿½tter den med at fï¿½lge mï¿½let. Ellers gï¿½r den tilbage til at idle.
