- Added text to the Infrared sensor testing

--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -12,10 +12,12 @@ distance sensors and the second part is testing the camera.
 
 \subsection{Ultrasonic Sensor}
 The test of the ultrasonic sensor was conduted using a tape measure and a wall
-made in LEGO. The test then proceeded by taking measurements at specific
+made of LEGO. The test then proceeded by taking measurements at specific
 lengths \fix{Table with results}
 {INPUT TABLE HERE}
 
 \subsection{Infrared}
+The test of the infrared sensor was not able to be conduted because none of the
+infrared sensor we have been given works. 
 
 \subsection{Camera tracking}%Will most likely need a better name
