--- a/sections/HWSelection/PlatformChoise/PlatformChoise.tex
+++ b/sections/HWSelection/PlatformChoise/PlatformChoise.tex
@@ -1,3 +1,11 @@
 \chapter{Choise of Platform}
+In this chapter the two platform choises will be presented, the two choises
+available are, Arduino and LEGO NXT. 
+\section{Arduino}
+
+
+\section{NXT}
+
+
 \input{sections/HWSelection/Sensors/SensorTest.tex}
 \input{sections/HWSelection/Motor/MotorChoise.tex}
