--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -1,6 +1,8 @@
 \section{Intro}
 Bla bla vi har delt det op i 3 faser - 
 \section{Detection}
-In order for our turret to be able to hit a target, it first needs to detect them. 
+In order for our turret to be able to hit a target, it first needs to detect it.-Differentiate between background and targets?
+-Have a zone it must protect
+-know a way to normalize after firing 
 \section{Tracking}
 \section{Shooting}
