--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -3,6 +3,9 @@ Bla bla vi har delt det op i 3 faser -
 \section{Detection}
 In order for our turret to be able to hit a target, it first needs to detect it.-Differentiate between background and targets?
 -Have a zone it must protect
--know a way to normalize after firing 
+-know a way to normalize after firing
+-Identify a target 
 \section{Tracking}
+-Keep track of a target
+-
 \section{Shooting}
