Wrote for infrared sensor test, not done yet

--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -17,7 +17,13 @@ lengths \fix{Table with results}
 {INPUT TABLE HERE}
 
 \subsection{Infrared}
-The test of the infrared sensor was not able to be conduted because none of the
-infrared sensor we have been given works. 
+The test of the infrared sensor was not able to be conduted since there were
+some issues with the different sensors. The first sensor did not work at all,
+since it was an infrared sensor a camera was used to see wether the infrared LED
+lid up. Since it did not light we concluded that the sensor was broken. \nl
+
+When trying to test the other sensor, first it did not give a reading so the
+same test was conducted using a camera to see if the sensor was broken. It was
+concluded that the sensor was not broken. It was then discovered that 
 
 \subsection{Camera tracking}%Will most likely need a better name
