--- a/sections/Requirements/Scenario.tex
+++ b/sections/Requirements/Scenario.tex
@@ -1,7 +1,12 @@
 \chapter{Requirements}
 \section{Scenarios}
+
+
+
+
 \subsection{Ideal scenario}
-An ideal scenario for the turret is presented:\nl
+
+The following requirements where extrapolated from our sccenario:\nl
 
 The turret is able to turn 180 degrees.\nl
 
