Opdateret Problem domain

--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -2,14 +2,18 @@
 Fluff and red thread
 (Go indepth with the phases)
 
+
 \section{Ideal Scenario}
 Based on the initial problem it is now possible to describe how the turret is
-supposed to operate. An ideal scenario has been constructed in order to better
-visualize it, and serve as a basis for the requirements engineering. The ideal
-scenario involves two actors the ``Turret'' and the ``Target'' and how they
-interact with each other.
+supposed to operate. An ideal scenario is constructed in order to better
+visualize it, and to serve as a basis for the requirements engineering. The
+ideal scenario involves the two actors ``Turret'' and ``Target'' and
+describes how they interact with each other.
 
-\subsection{The Turret}
+\begin{center}
+\colorbox{diff}{
+\begin{minipage}{0.8\linewidth}
+\textbf{Ideal Scenario:}
 
 The turret is set down on an even floor and turned on. It then turns searching
 for a target by turning left and right scanning an area for possible targets.
@@ -17,21 +21,26 @@ for a target by turning left and right scanning an area for possible targets.
 If the turret detects a target, it should be able to predict the targets
 movement, in order to anticipate the targets position at any given time.
 
+The target is moving on an even plane at a constant speed driving in a straight
+line(perpendicular?). The target moves at a speed such that the turret will miss
+if it fires when the target is directly in front of the turret.
+
 The turret moves into a firing position based on the predicted position and
 then fires at the appropriate time, in order to hit the target at the predicted
 position. 
 
 If the turret stops sensing targets, it should start scanning the area again.
 
-\subsection{The Target}
-The target is moving on an even plane at a constant speed driving in a straight
-line(perpendicular?). The target moves at a speed such that the turret will miss
-if it fires when the target is directly in front of the turret.
+\end{minipage}
+}
+\end{center}
+
 
 \section{Phases}
-Based on the ideal scenario, three distrinct phases were identified. The
-``Scanning'' phase where the turret searches for a target, The ``Tracking''
-phase where the turret collects and calculates a trajectory for the target and a
+Based on the ideal scenario three distrinct phases are identified,
+``Scanning'', ``Tracking'' and ``Shooting''. The ``Scanning'' phase was where
+the turret searched for a target by turning. The ``Tracking'' phase where the
+turret collects data and calculates the trajectory for the target. The
 ``Shooting'' phase where the turret moves to a firing position and shoots at the
 correct time. These phases will now be examined in order to identify the
 problems in their respective domain.
