Ultrasonic sensor test, added a new package

--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -11,16 +11,30 @@ The testing will be divided into to two parts, one part is testing the two
 distance sensors and the second part is testing the camera. 
 
 \subsection{Ultrasonic Sensor}
-The test of the ultrasonic sensor was conduted using a tape measure and a wall
-made of LEGO. The test then proceeded by taking measurements at specific
-lengths \fix{Table with results}
-{INPUT TABLE HERE}
+The test of the ultrasonic sensor was divided into 4 different experiments, the
+difference between the experiments are the size of the object being tracked and
+whether the sensor is shielded. The different object sizes was tested with a
+shielded sensor and a non shielded sensor. \nl
+
+% \begin{tikzpicture}
+%   \begin{axis}
+%   [xlabel={$x$},
+%   ylabel={$y$},
+%   xmin = 0, xmax=255,
+%   ymin = 0, ymax=255
+%   ]
+%     \addplot []{} 
+%   \end{axis}
+% \end{tikzpicture}
+
+This sensor has a range of 0 to 255 cm and will not be too limiting in terms of
+how far the object can be from the canon. 
 
 \subsection{Infrared}
-The test of the infrared sensor was not able to be conduted since there were
+The test of the infrared sensor was not able to be conducted since there were
 some issues with the different sensors. The first sensor did not work at all,
-since it was an infrared sensor a camera was used to see wether the infrared LED
-lid up. Since it did not light we concluded that the sensor was broken. \nl
+since it was an infrared sensor a camera was used to see whether the infrared
+LED lid up. Since it did not light we concluded that the sensor was broken. \nl
 
 When trying to test the other sensor, first it did not give a reading so the
 same test was conducted using a camera to see if the sensor was broken. It was
