--- a/setup/preamble.tex
+++ b/setup/preamble.tex
@@ -19,6 +19,7 @@
 \usepackage{listings}
 \usepackage{amsmath}
 \usepackage{longtable}
+\usepackage{pgfplots}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Language, Encoding and Fonts
 % http://en.wikibooks.org/wiki/LaTeX/Internationalization
