Update problemdomain Summary

--- a/sections/Requirements/Summary.tex
+++ b/sections/Requirements/Summary.tex
@@ -1,5 +1,13 @@
 \section{Summary}
-In conclusion several problems were found in the domain:
+In conclusion, an ideal scenario was constructed based on the initial problem.
+Certain hard requirements can be determined already based on the semester topic
+\begin{enumerate}
+	\item The system must be embedded
+	\item The system must use techniques from either the MI or the RTS course, or both
+\end{enumerate}
+
+
+In addition several problems were identified in the problemdomain:
 \begin{itemize}
 	\item How will the cannon detect the target?
 	\item What information is needed to properly calculate and predict the trajectory of a target
@@ -8,4 +16,4 @@ In conclusion several problems were found in the domain:
 	\item How does the turret shoot the target
 	\item How does the turret hit targets at varying distances
 \end{itemize}
-In the next part of the analysis these questions will be thoroughly examined and answered in order to construct a problem statement
+These questions will serve as the foundation for our analysis, and help to refine the initial problem into a problemstatement.
