Very updated problem domain and removed the summary.tex file

--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -1,1 +1,15 @@
 \chapter{Introduction}
+
+\section{Initial Problem}
+The theme of this semester is Embedded systems. This means that the focus of
+the project will be working with a set of constraints that must be balanced.
+Furthermore the project should include techniques from the machine intelligence
+course and the real-time systems course.\nl
+
+One of the project proposals was a challenge by Ren\'e to build something that
+is able to hit a moving target. Based on our desire to learn from the experience
+as well as the reason ``shooting stuff is fun'' it was decided
+to work with this project. This produces the question:\nl
+
+\textit{Is it possible to construct an embedded system that is able to fire and hit
+a target in motion without user-input?}
