--- a/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
@@ -1,4 +1,4 @@
-\section{Embedded Systems}
+\chapter{Embedded Systems}
 introduction - As most people are probably aware of, computers have become an integral part of our modern society,
 and rapidly changing the way we do things. When most people say computers, they talk about the class of computers
 known as desktops, laptops, servers and tablets. But there is an entire class of computers surrounding us in much greater numbers,
