--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -1,5 +1,5 @@
 \chapter{Introduction}
-
+Something something introductionS
 \section{Initial Problem}
 The theme of this semester is Embedded systems. This means that the focus of
 the project will be working with a set of constraints that must be balanced.
