Summary included in problemdomain and anchor for next chapter

--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -111,5 +111,5 @@ In addition several problems were identified in the problemdomain:
 	\item How does the turret shoot the target
 	\item How does the turret hit targets at varying distances
 \end{itemize}
-These questions will serve as the foundation for our analysis, and help to refine the initial problem into a problemstatement.
+These questions will serve as the foundation for the analysis, and help to refine the initial problem into a problemstatement. In the next chapter the theory behind embedded systems will be explained in order to properly understand the constraints imposed by such a system. 
 
