add platform choice to chapters

--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -1,10 +1,10 @@
-\inputS{Introduction}%Introduction
+\inputS{Introduction}%Introduction+init prob
 \inputS{Requirements/ProblemDomain}
 
 \part{Analysis}
 \input{sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex}
 
-\input{sections/HWSelection/PlatformChoise/PlatformChoise.tex}%NXT v. Arduino
+\input{sections/Analyse/PlatformChoice.tex}%NXT v. Arduino
 
 %	Test of sensors 
 %	Motor
