--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -1,5 +1,15 @@
 \chapter{Introduction}
-Something something introductionS
+
+Computers are an integral part of modern society, they are used in everything
+from assemblyline factories to kitchen appliances. More and more they are being
+used in daily life, without even being noticed. A computer now covers much more
+than just a desktop, laptop, tablet or a server. There are  
+
+There is an entire class of
+computers surrounding us in much greater numbers, although their presence is a
+lot more incognito. The computers are built into larger electronic devices.
+This class of computer systems is also known as Embedded Systems.
+
 \section{Initial Problem}
 The theme of this semester is Embedded systems. This means that the focus of
 the project will be working with a set of constraints that must be balanced.
