Made some good progess on the camera part, almost as done as it can get for now

--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -50,3 +50,15 @@ become a very limiting factor as to how far the target can be placed from the
 cannon. 
 
 \subsection{Camera tracking}%Will most likely need a better name
+Testing the camera will consist of several parts, these parts will heavily rely
+on the technical specifications of the camera. Therefor, the first part of this
+section will be on the technical specifications of the camera and the needed
+software.\nl
+
+The camera runs at 30 fps and with a resolution of 88 x 144, this could
+potentialy become an issue since it is a very low resolution. But that depends
+on how large the object/objects being tracked are. It also has the ability to
+track up to 8 different objects. \nl
+
+The setup of the camera is quite simple and is done using a computer, here it is
+setup which color it is suposed to track. The 
