--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -32,11 +32,11 @@ in \autoref{AirResDisc}.
 
 \subsection{Calculating Distance}\label{CalcDist}
 In order to calculate the distance at which the projectile will touch the groud
-we need to combine the expressions in order to express the height $\textbf{y}$
-as a function of the horizontal distance $\textbf{x}$. The first step is to take
-\autoref{slength} and express the time $\textbf{t}$ as a function of the
-horizontal distance $\textbf{x}$. This is done as the resulting expression can
-be substituted into \autoref{sheight}. Doing this gives the equation:
+we need to combine the expressions in order to express the horisontal distance
+$\textbf{y}$ as a function of the height $\textbf{x}$. The first step is to take
+\autoref{sheight} and express the time $\textbf{t}$ as a function of the
+height $\textbf{y}$. This is done as the resulting expression can
+be substituted into \autoref{slength}. Doing this gives the equation:
 \begin{equation}\label{FinEq}
 x\ =\ v*cos(a)*\frac{v*sin(a)+\sqrt{v^2*sin(a)^2-2*g*y}}{g}
 \end{equation}
